# maiwar

./: .gitignore  README.md  default.nix  maiwar.cabal  shell.nix
app/: Main.hs
examples/echo/: Main.hs
examples/stream-vs-vanilla/stream/: Main.hs
examples/stream-vs-vanilla/vanilla/: Main.hs
lib/: Maiwar.hs
lib/Control/Monad/Managed/: Extra.hs
lib/Maiwar/: CLI.hs  Handler.hs  MSF.hs  Network.hs  Pipe.hs  Stream.hs
lib/Maiwar/Handlers/: Static.hs
lib/Maiwar/MSF/Attoparsec/: ByteString.hs
lib/Maiwar/Middleware/: Logged.hs  Redirecting.hs  Static.hs
lib/Maiwar/Middleware/Static/: Base.hs  Etag.hs  Gzip.hs
lib/Maiwar/Network/: HTTP.hs  TCP.hs
lib/Maiwar/Network/TCP/: TLS.hs
lib/Maiwar/Pipe/: Managed.hs  Resource.hs
lib/Maiwar/Pipe/Attoparsec/: ByteString.hs
lib/Maiwar/Pipe/System/: IO.hs  Timeout.hs
lib/Maiwar/Stream/: ByteString.hs  Exception.hs  Managed.hs  Resource.hs
lib/Maiwar/Stream/Attoparsec/: ByteString.hs
lib/Maiwar/Stream/System/: IO.hs  Timeout.hs
test/: Doctest.hs
