cabal-version:      2.4
name:               maiwar
version:            0.1.0.0
synopsis:           Pipes and streams
description:        Bi- and uni-directional data/control structures for streaming.
bug-reports:        https://github.com/bradparker/maiwar
license:            BSD-3-Clause
author:             Brad Parker
maintainer:         hi@bradparker.com

extra-source-files:
  README.md

library
  exposed-modules:
    Maiwar.CLI
    Maiwar.Network
    Maiwar.Network.HTTP
    Maiwar.Network.TCP
    Maiwar.Network.TCP.TLS
    Maiwar.Pipe
    Maiwar.Pipe.Attoparsec.ByteString
    Maiwar.Stream
    Maiwar.Stream.Attoparsec.ByteString
    Maiwar.Stream.ByteString
  build-depends:
    base ^>=4.16.0.0,
    optparse-applicative,
    attoparsec,
    bytestring,
    exceptions,
    managed,
    mtl,
    network,
    network-simple,
    network-simple-tls,
    safe-exceptions,
    stm,
    transformers,
    unix,
  hs-source-dirs:
    lib
  default-language:
    Haskell2010
