cabal-version:      2.4
name:               maiwar
version:            0.1.0.0
synopsis:           A streaming web-server
description:        A server built on bi- and uni-directional data/control structures for streaming.
bug-reports:        https://github.com/bradparker/maiwar
license:            BSD-3-Clause
author:             Brad Parker
maintainer:         hi@bradparker.com

extra-source-files:
  README.md

library
  exposed-modules:
    Control.Monad.Managed.Extra
    Maiwar
    Maiwar.CLI
    Maiwar.Handler
    Maiwar.Handlers.Static
    Maiwar.Middleware.Logged
    Maiwar.Middleware.Redirecting
    Maiwar.Middleware.Static
    Maiwar.Middleware.Static.Base
    Maiwar.Middleware.Static.Etag
    Maiwar.Middleware.Static.Gzip
    Maiwar.Network.HTTP
    Maiwar.Network.TCP
    Maiwar.Network.TCP.TLS
    Maiwar.Pipe
    Maiwar.Pipe.Attoparsec.ByteString
    Maiwar.Pipe.Managed
    Maiwar.Stream
    Maiwar.Stream.Attoparsec.ByteString
    Maiwar.Stream.ByteString
    Maiwar.Stream.Managed
  build-depends:
    base ^>=4.16.0.0,
    attoparsec,
    bytestring,
    containers,
    exceptions,
    filepath,
    managed,
    mtl,
    network,
    network-simple,
    network-simple-tls,
    optparse-applicative,
    safe-exceptions,
    stm,
    time,
    transformers,
    unix,
  hs-source-dirs:
    lib
  default-language:
    Haskell2010

test-suite doctest
  type:
    exitcode-stdio-1.0
  build-depends:
    base ^>=4.16.0.0,
    doctest
  hs-source-dirs:
    test
  main-is:
    Doctest.hs
  default-language:
    Haskell2010

executable maiwar
  build-depends:
    base ^>=4.16.0.0,
    bytestring,
    containers,
    maiwar,
    optparse-applicative,
  hs-source-dirs:
    app
  main-is:
    Main.hs
  default-language:
    Haskell2010
  ghc-options:
    -fspecialise-aggressively -fexpose-all-unfoldings -threaded

executable example-echo
  build-depends:
    base ^>=4.16.0.0,
    maiwar,
  hs-source-dirs:
    examples/echo
  main-is:
    Main.hs
  default-language:
    Haskell2010
  ghc-options:
    -fspecialise-aggressively -fexpose-all-unfoldings

executable example-stream-vs-vanilla-stream
  build-depends:
    base ^>=4.16.0.0,
    maiwar,
  hs-source-dirs:
    examples/stream-vs-vanilla/stream
  main-is:
    Main.hs
  default-language:
    Haskell2010
  ghc-options:
    -ddump-asm -ddump-to-file -fspecialise-aggressively -fexpose-all-unfoldings

executable example-stream-vs-vanilla-vanilla
  build-depends:
    base ^>=4.16.0.0,
    maiwar,
  hs-source-dirs:
    examples/stream-vs-vanilla/vanilla
  main-is:
    Main.hs
  default-language:
    Haskell2010
  ghc-options:
    -ddump-asm -ddump-to-file -fspecialise-aggressively -fexpose-all-unfoldings
